[package]
name = "lightning-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "6.0.1"
futures = "0.3.30"
lazy_static = "1.5.0"
ntex = { version = "1.0", features = ["tokio"] }
ntex-files = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
