[package]
name = "lightning-kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
async-fs = "2.1.2"
futures-lite = "2.6.0"
serde = { version = "1.0.217", features = ["derive"] }
